Add a notification box class that updates in place

https://bugzilla.gnome.org/show_bug.cgi?id=633457